# 8SMC1

./: .clang-format  .gitignore  .gitmodules  .syntastic_cpp_config  ABOUT  CMakeLists.txt  DevCLI.cpp  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Makefile  MotorTask.cpp  NEWS.md  NOTICE  README.md  Stub.cxx  TODO  TODO.md  auto.conf  config.ini  main.cpp  platform.h
cli/: CLI.cpp  CLI.h  CMakeLists.txt  DevCLI.cpp  DevCLI.h  README.md  main.cpp
ctrl-lib/: ActionQueue.cpp  CMakeLists.txt  CircleGenerator.cpp  CircleGenerator.h  ConfigManager.cpp  ConfigManager.h  ConfigValidator.cpp  CoordController.cpp  CoordHandle.cpp  CoordHandle.h  CoordPlane.h  CoordPlaneLog.cpp  CoordPlaneMap.cpp  CoordPlaneStack.cpp  CoordPlaneValidator.cpp  CoordTask.cpp  CoordTask.h  CoordTranslator.cpp  CoordTranslator.h  CtrlCore.cpp  CtrlCore.h  DeviceController.cpp  DeviceController.h  EventListener.h  ExtEngine.h  GCodeParser.cpp  GCodeParser.h  GraphBuilder.cpp  GraphBuilder.h  InstrumentController.cpp  InstrumentController.h  MotorController.cpp  MotorController.h  README.md  RequestResolver.cpp  RequestResolver.h  Resource.cpp  SignalHandler.cpp  StandartRequestResolvers.cpp  SystemManager.cpp  (+5 more)
ctrl-lib/actions/: DeviceActions.cpp  PlaneActions.cpp
ctrl-lib/conf/: ConfigIO.cpp  ConfigManager.cpp  ConfigValidator.cpp  Entry.cpp  INI.cpp  RequestResolver.cpp  Settings.cpp  StandartRequestResolvers.cpp  Value.cpp
ctrl-lib/ctrl/: DeviceController.cpp  DeviceControllerSet.cpp  InstrumentController.cpp  MotorController.cpp
ctrl-lib/device/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  README.md
ctrl-lib/gcode/: GCodeInterpreter.cpp  GCodeStream.cpp  GCodeWriter.cpp
ctrl-lib/graph/: AST.cpp  AST.h  DefaultFunctions.cpp  Formula.cpp  FunctionEngine.cpp  FunctionEngine.h  FunctionLexer.cpp  FunctionParser.cpp  FunctionParser.h  Lexem.h  MathEngine.cpp  README.md
ctrl-lib/logger/: Format.cpp  Global.cpp  Logger.cpp  Session.cpp  Shortcuts.cpp  Sink.cpp  TimedJournal.cpp
ctrl-lib/misc/: CircleGenerator.cpp  CircleGenerator.h  GCodeParser.cpp  GCodeParser.h  GCodeWriter.cpp  GraphBuilder.cpp  GraphBuilder.h  README.md
ctrl-lib/plane/: CoordController.cpp  CoordHandle.cpp  CoordPlane.cpp  CoordPlane.h  CoordPlaneLinearizer.cpp  CoordPlaneLog.cpp  CoordPlaneMap.cpp  CoordPlaneMapLog.cpp  CoordPlaneSet.cpp  CoordPlaneStack.cpp  CoordPlaneValidator.cpp  FloatCoordPlane.cpp  ProxyCoordPlane.cpp  README.md  VirtualCoordPlane.cpp
ctrl-lib/script/: ScriptEngine.cpp
ctrl-lib/task/: AbstractCoordTask.cpp  CoordTask.cpp  CoordTask.h  CoordTaskWrapper.cpp  GCodeCoordTask.cpp  LinearCoordTask.cpp  README.md  TaskSet.cpp
ctrl-lib/translator/: BasicCoordTranslator.cpp  ComplexCoordTranslator.cpp  CoordTranslator.h  LinearCoordTranslator.cpp  LogarithmicCoordTranslator.cpp  PolarCoordTranslator.cpp  README.md
device/emulated/: CMakeLists.txt  EmuDeviceManager.cpp  EmuDeviceManager.h  EmuInstrument.cpp  EmuInstrument.h  EmuMotor.cpp  EmuMotor.h  README.md
device/emux/: CMakeLists.txt  EmuDeviceManager.cpp  EmuInstrument.cpp  EmuMotor.cpp
device/standard/: 8SMC1.ini  8SMC1Device.cpp  CMakeLists.txt  NL300.ini  NL300Command.cpp  NL300Config.cpp  NL300Instrument.cpp  NL300Message.cpp  StandardDeviceManager.cpp  Stub.cpp
device/standart/: 8SMC1.ini  8SMC1Device.cpp  8SMC1Device.h  8SMC1DeviceManager.h  CMakeLists.txt  NL300.ini  NL300Command.cpp  NL300Config.cpp  NL300Instrument.cpp  NL300Instrument.h  NL300Message.cpp  NL300Message.h  StandartDeviceManager.cpp  StandartDeviceManager.h  Stub.cpp
ext/sample/: CMakeLists.txt  ext_sample_main.cpp
lua-calx/: CMakeLists.txt  LuaCalXEnvironment.cpp  LuaScriptEngine.cpp  main.cpp
lua-calx/scripts/: calxLib.lua  lib.lua  main.lua
ncli/: CLICommand.cpp  CLICommand.h  CLICommandSystem.cpp  CLICommandSystem.h  CLICore.h  CLIException.cpp  CLIException.h  CLIParameter.cpp  CLIParameter.h  CLIProcessor.h  CMakeLists.txt  NCLIProcessor.cpp  main.cpp
ncli/processors/: DeviceNCLI.cpp
tests/unit/: CMakeLists.txt  config.cpp  controller.cpp  gcode.cpp  graph.cpp  plane.cpp  translator.cpp
ui/: CMakeLists.txt  CalxAboutDialog.cpp  CalxAboutDialog.h  CalxActionQueue.cpp  CalxActionQueue.h  CalxApp.cpp  CalxApp.h  CalxAutoconfDialog.cpp  CalxAutoconfDialog.h  CalxConfigEditor.cpp  CalxConfigEditor.h  CalxConfigLoader.cpp  CalxConsoleWidget.cpp  CalxConsoleWidget.h  CalxCoordCtrl.cpp  CalxCoordCtrl.h  CalxCoordDialog.cpp  CalxCoordDialog.h  CalxCoordPanel.cpp  CalxCoordPanel.h  CalxCoordTranslator.cpp  CalxCoordTranslator.h  CalxDebugConsole.cpp  CalxDebugConsole.h  CalxDeviceCtrl.cpp  CalxDeviceCtrl.h  CalxDevicePanel.cpp  CalxDevicePanel.h  CalxErrorHandler.cpp  CalxErrorHandler.h  CalxFrame.cpp  CalxFrame.h  CalxGcodeHandle.cpp  CalxGcodeLoader.cpp  CalxGcodeLoader.h  CalxJournalManager.cpp  CalxPanel.cpp  CalxPanel.h  CalxTaskHandle.h  CalxTaskPanel.cpp  (+15 more)
ui/config/: CalxConfigEditor.cpp  CalxConfigEditorDialogs.cpp
ui/coord/: CalxCoordActions.cpp  CalxCoordAdjuster.cpp  CalxCoordArcComponent.cpp  CalxCoordArcCtrl.cpp  CalxCoordArcCtrl.h  CalxCoordController.cpp  CalxCoordCtrl.cpp  CalxCoordCtrl.h  CalxCoordDialog.cpp  CalxCoordDialog.h  CalxCoordFilter.cpp  CalxCoordFilter.h  CalxCoordFilterComponent.cpp  CalxCoordGraphComponent.cpp  CalxCoordGraphCtrl.cpp  CalxCoordGraphCtrl.h  CalxCoordLinearComponent.cpp  CalxCoordLinearCtrl.cpp  CalxCoordLinearCtrl.h  CalxCoordMiscCtrl.cpp  CalxCoordMiscCtrl.h  CalxCoordOtherComponent.cpp  CalxCoordOtherCtrl.cpp  CalxCoordOtherCtrl.h  CalxCoordPane.cpp  CalxCoordPaneMisc.cpp  CalxCoordPanel.cpp  CalxCoordPanel.h  CalxCoordPlaneWatcher.cpp  CalxCoordPlaneWatcher.h  CalxCoordPositionComponent.cpp  CalxCoordPositionCtrl.cpp  CalxCoordPositionCtrl.h  CalxCoordTranslator.cpp  CalxCoordTranslator.h  CalxPlaneProviders.cpp  CalxVirtualPlane.cpp  CalxVirtualPlane.h  CalxWatcherPool.cpp
ui/dev/: CalxCOMSelectDialog.cpp  CalxCOMSelectDialog.h  CalxDeviceConstructor.cpp  CalxDeviceCtrl.cpp  CalxDeviceCtrl.h  CalxDevicePanel.cpp  CalxDevicePanel.h  CalxDeviceProviders.cpp  CalxInstrumentCtrl.cpp  (+7 more)
(+437 files in other folders)
