cmake_minimum_required(VERSION 3.1)
project(CalX)

set (CMAKE_CXX_STANDARD 11)
include_directories(${CMAKE_SOURCE_DIR})
add_executable(calxcli DevCLI.cpp CLI.cpp main.cpp)
set(CPACK_COMPONENT_CALXCLI_DEPENDS calx_ctrl_lib CACHE INTERNAL "")
if (TARGET dev_standart)
	target_link_libraries(calxcli calx dev_standart)
	set(CPACK_COMPONENT_CALXCLI_DEPENDS ${CPACK_COMPONENT_CALXCLI_DEPENDS} devapi_standart CACHE INTERNAL "")
else (TARGET dev_standart)
	target_link_libraries(calxcli calx dev_emulated)
	set(CPACK_COMPONENT_CALXCLI_DEPENDS ${CPACK_COMPONENT_CALXCLI_DEPENDS} devapi_emulated CACHE INTERNAL "")
endif (TARGET dev_standart)
if (WIN32)
	install(TARGETS calxcli DESTINATION / COMPONENT calxcli)
else (WIN32)
	install(TARGETS calxcli DESTINATION bin COMPONENT calxcli)
endif (WIN32)
set(CPACK_COMPONENT_CALXCLI_DISPLAY_NAME "Command line interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALXCLI_GROUP "User interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALXCLI_DESCRIPTION "Minimal command line interface." CACHE INTERNAL "")