cmake_minimum_required(VERSION 3.1)
project(CalX)

include_directories(${CMAKE_SOURCE_DIR}/headers)

add_executable(calx_cli DevCLI.cpp CLI.cpp main.cpp)
if (MINGW)
	SET_TARGET_PROPERTIES(calx_cli PROPERTIES PREFIX "")
endif (MINGW)
set(CPACK_COMPONENT_CALX_CLI_DEPENDS calx_ctrl_lib CACHE INTERNAL "")
if (TARGET dev_standart)
	target_link_libraries(calx_cli calx dev_standart)
	set(CPACK_COMPONENT_CALX_CLI_DEPENDS ${CPACK_COMPONENT_CALX_CLI_DEPENDS} devapi_standart CACHE INTERNAL "")
else (TARGET dev_standart)
	target_link_libraries(calx_cli calx dev_emulated)
	set(CPACK_COMPONENT_CALX_CLI_DEPENDS ${CPACK_COMPONENT_CALX_CLI_DEPENDS} devapi_emulated CACHE INTERNAL "")
endif (TARGET dev_standart)
add_custom_command(TARGET calx_cli POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:calx_cli> ${build_directory}
)
add_dependencies(calx_cli calx-init-target)
if (WIN32)
	install(TARGETS calx_cli DESTINATION / COMPONENT calx_cli)
else (WIN32)
	install(TARGETS calx_cli DESTINATION bin COMPONENT calx_cli)
endif (WIN32)
set(CPACK_COMPONENT_CALX_CLI_DISPLAY_NAME "Command line interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_CLI_GROUP "User interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_CLI_DESCRIPTION "Minimal command line interface." CACHE INTERNAL "")
