cmake_minimum_required(VERSION 2.6)
project(CalX)


include_directories(${CMAKE_SOURCE_DIR})
add_definitions(-DLOGGING)
file(GLOB_RECURSE SRCS *.cpp)
add_library(calx SHARED ${SRCS})
target_include_directories(calx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
if (WIN32)
	install(TARGETS calx DESTINATION / COMPONENT calx_ctrl_lib)
else (WIN32)
	install(TARGETS calx DESTINATION lib COMPONENT calx_ctrl_lib)
endif (WIN32)
set(CPACK_COMPONENT_CALX_CTRL_LIB_DISPLAY_NAME "CalX Control libraries" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_CTRL_LIB_GROUP "Libraries" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_CTRL_LIB_DESCRIPTION "System functional core. Contains all system logic." CACHE INTERNAL "")