cmake_minimum_required(VERSION 3.1)
project(CalX)

set (CMAKE_CXX_STANDARD 11)
include_directories(${CMAKE_SOURCE_DIR})
file(GLOB_RECURSE SRCS *.cpp)
add_executable(calx_ncli ${SRCS})
set(CPACK_COMPONENT_CALX_NCLI_DEPENDS calx_ctrl_lib CACHE INTERNAL "")
if (TARGET dev_standart)
	target_link_libraries(calx_ncli calx dev_standart)
	set(CPACK_COMPONENT_CALX_NCLI_DEPENDS ${CPACK_COMPONENT_CALX_NCLI_DEPENDS} devapi_standart CACHE INTERNAL "")
else (TARGET dev_standart)
	target_link_libraries(calx_ncli calx dev_emulated)
	set(CPACK_COMPONENT_CALX_NCLI_DEPENDS ${CPACK_COMPONENT_CALX_NCLI_DEPENDS} devapi_emulated CACHE INTERNAL "")
endif (TARGET dev_standart)
add_custom_command(TARGET calx_ncli POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:calx_ncli> ${build_directory}
)
if (WIN32)
	install(TARGETS calx_ncli DESTINATION / COMPONENT calx_ncli)
else (WIN32)
	install(TARGETS calx_ncli DESTINATION bin COMPONENT calx_ncli)
endif (WIN32)
set(CPACK_COMPONENT_NCALX_CLI_DISPLAY_NAME "New command line interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_NCLI_GROUP "User interface" CACHE INTERNAL "")
set(CPACK_COMPONENT_CALX_NCLI_DESCRIPTION "Minimal command line interface." CACHE INTERNAL "")
