cmake_minimum_required(VERSION 3.1)
project(CalX)

set (CMAKE_CXX_STANDARD 11)

set(wxWidgets_USE_LIBS)
if (WIN32)
	set(wxWidgets_EXCLUDE_COMMON_LIBRARIES true)
	if (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_CONFIGURATION  mswud)
	else (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_CONFIGURATION  mswu)
	endif (CMAKE_BUILD_TYPE EQUAL DEBUG)
	find_package(wxWidgets COMPONENTS mono)
else (WIN32)
	set(wxWidgets_USE_UNICODE ON)
	if (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_USE_DEBUG ON)
	else (CMAKE_BUILD_TYPE EQUAL DEBUG)
		set(wxWidgets_USE_DEBUG OFF)
	endif (CMAKE_BUILD_TYPE EQUAL DEBUG)
	find_package(wxWidgets)
endif (WIN32)

if (wxWidgets_FOUND)
	include(${wxWidgets_USE_FILE})
	include_directories(${CMAKE_SOURCE_DIR}/headers) 
	include_directories(${CMAKE_CURRENT_SOURCE_DIR})
	file(GLOB_RECURSE SRCS *.cpp ${CMAKE_SOURCE_DIR}/cli/CLI.cpp ${CMAKE_SOURCE_DIR}/cli/DevCLI.cpp)
	if (EXISTS ${CMAKE_SOURCE_DIR}/misc/icon.ico)
		configure_file(${CMAKE_SOURCE_DIR}/misc/icon.ico ${CMAKE_BINARY_DIR}/icon.ico COPYONLY)
		install(FILES ${CMAKE_BINARY_DIR}/icon.ico DESTINATION /)
		set(SRCS ${SRCS} calxui.rc)
	endif (EXISTS ${CMAKE_SOURCE_DIR}/misc/icon.ico)
	add_executable(calx_ui ${SRCS})
	if(WIN32)
		set_target_properties(calx_ui PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
		file(GLOB wxDll ${wxWidgets_LIB_DIR}/wxmsw[0-9][0-9][0-9]ud_vc_custom.dll ${wxWidgets_LIB_DIR}/wxmsw[0-9][0-9][0-9]u_vc_custom.dll)
		if (NOT CMAKE_BUILD_TYPE EQUAL DEBUG)
			file(GLOB wxInsDll ${wxWidgets_LIB_DIR}/wxmsw[0-9][0-9][0-9]u_vc_custom.dll)
			install(FILES ${wxInsDll} DESTINATION / COMPONENT wxlibs)
			set(CPACK_COMPONENT_WXLIBS_DISPLAY_NAME "wxWidgets libraries" CACHE INTERNAL "")
			set(CPACK_COMPONENT_WXLIBS_GROUP "Libraries" CACHE INTERNAL "")
			set(CPACK_COMPONENT_WXLIBS_DESCRIPTION "wxWidgets user interface libraries. See <https://www.wxwidgets.org/>" CACHE INTERNAL "")
		endif (NOT CMAKE_BUILD_TYPE EQUAL DEBUG)
		file(COPY ${wxDll} DESTINATION ${CMAKE_BINARY_DIR})
		add_custom_command(TARGET calx_ui POST_BUILD
    		COMMAND ${CMAKE_COMMAND} -E copy ${wxDll} ${build_directory}
		)
	endif(WIN32)
	target_link_libraries(calx_ui ${wxWidgets_LIBRARIES} calx)
	add_custom_command(TARGET calx_ui POST_BUILD
    	COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:calx_ui> ${build_directory}
	)
	if (WIN32)
		install(TARGETS calx_ui DESTINATION / COMPONENT calx_ui)
	else (WIN32)
		install(TARGETS calx_ui DESTINATION bin COMPONENT calx_ui)
	endif (WIN32)
	set(CPACK_COMPONENT_CALX_UI_DISPLAY_NAME "CalX User interface" CACHE INTERNAL "")
	set(CPACK_COMPONENT_CALX_UI_DEPENDS calx_ctrl_lib wxlibs CACHE INTERNAL "")
	set(CPACK_COMPONENT_CALX_UI_GROUP "User interface" CACHE INTERNAL "")
	set(CPACK_COMPONENT_CALX_UI_DESCRIPTION "Graphics User interface." CACHE INTERNAL "")

else(wxWidgets_FOUND)
	message("wxWidgets not found!")
endif(wxWidgets_FOUND)
