cmake_minimum_required(VERSION 2.6)
project(CalX)

if (WIN32)
	
	if (EXISTS ${CMAKE_SOURCE_DIR}/res/USMCDLL.h)
		include_directories(${CMAKE_SOURCE_DIR}/res)
		add_library(USMCDLL SHARED stub.cpp)
		install(TARGETS USMCDLL DESTINATION / COMPONENT usmc_stub)
		set(CPACK_COMPONENT_USMC_STUB_DISPLAY_NAME "USMC driver stub" CACHE INTERNAL "")
		set(CPACK_COMPONENT_USMC_STUB_GROUP "Libraries" CACHE INTERNAL "")
		set(CPACK_COMPONENT_USMC_STUB_DISABLED TRUE CACHE INTERNAL "")
		set(CPACK_COMPONENT_USMC_STUB_DESCRIPTION "Standa 8SMC1 motor emulator. Install only if you haven't installed 8SMC1 motor drivers." CACHE INTERNAL "")
	else (EXISTS ${CMAKE_SOURCE_DIR}/res/USMCDLL.h)
		add_library(USMCDLL SHARED IMPORTED)
	endif (EXISTS ${CMAKE_SOURCE_DIR}/res/USMCDLL.h)
	
	
	include_directories(${CMAKE_SOURCE_DIR})
	add_library(dev_standart SHARED 8SMC1Device.cpp NL300Instrument.cpp StandartDeviceManager.cpp)
	target_link_libraries(dev_standart calx USMCDLL)
	install(TARGETS dev_standart DESTINATION / COMPONENT devapi_standart)
	set(CPACK_COMPONENT_DEVAPI_STANDART_DISPLAY_NAME "8SMC1 stepped motors and NL300 laser Device API" CACHE INTERNAL "")
	set(CPACK_COMPONENT_DEVAPI_STANDART_DEPENDS calx_ctrl_lib CACHE INTERNAL "")
	set(CPACK_COMPONENT_DEVAPI_STANDART_GROUP "Device API" CACHE INTERNAL "")
	set(CPACK_COMPONENT_DEVAPI_STANDART_DESCRIPTION "Standart Device API implementation. Contains Standa 8SMC1 stepper motor and EKSPLA NL300 laser drivers." CACHE INTERNAL "")
endif (WIN32)
